--- a/khk.html
+++ b/khk.html
@@ -14,40 +14,42 @@
         </div>
     </header>
 
-    <main>
-        <section id="about-event" class="card">
-            <img src="Photos/khk.png" alt="Super Seminar Image" class="seminar-image">
-            <h2>About the Super Seminar</h2>
-            <p>Restigouche Dojo is proud to host a special <strong>Judo & Brazilian Jiu-Jitsu seminar</strong> in support of the Kids Helping Kids Super Seminar fundraiser. While the official Super Seminar takes place in Alberta, we are contributing to the cause by raising funds, spreading awareness, and bringing our community together for an exciting martial arts event. Join us for a day of learning, training, and making a difference.</p>
-            <ul>
-                <li>Participants of all ages will receive a Judo and Jiu Jitsu training.</li>
-                <li>Following the training, enjoy a 1-hour open mat rollathon with local athletes.</li>
-                <li>Entry fee: $20.00 (includes 1 prize draw entry).</li>
-                <li>Additional prize draw entries for each $20 raised.</li>
+<main>
+    <section id="about-event" class="card">
+        <img src="Photos/khk.png" alt="Super Seminar Image" class="seminar-image">
+        <h2>About the Super Seminar</h2>
+        <p>Restigouche Dojo is proud to host a special <strong>Judo & Brazilian Jiu-Jitsu seminar</strong> in support of the Kids Helping Kids Super Seminar fundraiser. While the official Super Seminar takes place in Alberta, we are contributing to the cause by raising funds, spreading awareness, and bringing our community together for an exciting martial arts event. Join us for a day of learning, training, and making a difference.</p>
+        <ul>
+            <li>Participants of all ages will receive Judo and Brazilian Jiu-Jitsu training from experienced black belts.</li>
+            <li>Following the training, enjoy a dynamic Roll-a-thon (10 rounds of 3 minutes each) with local athletes.</li>
+            <li>Entry fee: $10.00.</li>
+            <li>To be entered into the prize draw, a minimum of $20 raised is required (includes 1 prize draw entry).</li>
+            <li>Additional prize draw entries for each $20 raised.</li>
+        </ul>
+    </section>
 
-        <section id="incentives" class="card">
-            <h2>Special Participation Incentives</h2>
-            <p>For every $20 you raise, your name is entered into a prize draw for amazing prizes.</p>
-          
-        </section>
+    <section id="incentives" class="card">
+        <h2>Special Participation Incentives</h2>
+        <p>For every $20 you raise, your name is entered into a prize draw for amazing prizes.</p>
+    </section>
 
-        <section id="about-little-warriors" class="card">
-            <h2>About Little Warriors</h2>
-            <p>Little Warriors is a Canadian charity focused on the prevention, awareness, and treatment of child sexual abuse. Through programs like the <strong>Be Brave Ranch</strong>, <strong>Be Brave Bridge</strong>, and <strong>Prevent It!</strong> workshops, Little Warriors is committed to providing resources and support to affected children, teens, and families.</p>
-            <a href="https://littlewarriors.ca/kids-helping-kids-super-seminar/" target="_blank" class="button">Learn More About Little Warriors</a>
-        </section>
+    <section id="about-little-warriors" class="card">
+        <h2>About Little Warriors</h2>
+        <p>Little Warriors is a Canadian charity focused on the prevention, awareness, and treatment of child sexual abuse. Through programs like the <strong>Be Brave Ranch</strong>, <strong>Be Brave Bridge</strong>, and <strong>Prevent It!</strong> workshops, Little Warriors is committed to providing resources and support to affected children, teens, and families.</p>
+        <a href="https://littlewarriors.ca/kids-helping-kids-super-seminar/" target="_blank" class="button">Learn More About Little Warriors</a>
+    </section>
 
-        <section id="event-details" class="card">
-            <h2>Event Details</h2>
-            <ul>
-                <li><strong>Date:</strong> April 2024</li>
-                <li><strong>Location:</strong> Restigouche Dojo</li>
-                <li><strong>Registration Fee:</strong> $20.00 (includes one prize draw entry)</li>
-            </ul>
-            <p><strong>Sign up to start fundraising:</strong> <a href="https://www.canadahelps.org/en/charities/little-warriors/p2p/Kids_Helping_Kids_Super_Seminar_3_2025/page/sign-up" target="_blank" class="button">Create an Account</a></p>
-        </section>
+    <section id="event-details" class="card">
+        <h2>Event Details</h2>
+        <ul>
+            <li><strong>Date:</strong> April 12, 2025</li>
+            <li><strong>Location:</strong> Restigouche Dojo</li>
+            <li><strong>Registration Fee:</strong> $10.00 (includes 1 prize draw entry with a minimum of $20 raised for additional entries)</li>
+        </ul>
+        <p><strong>Sign up to start fundraising:</strong> <a href="https://www.canadahelps.org/en/charities/little-warriors/p2p/Kids_Helping_Kids_Super_Seminar_3_2025/page/sign-up" target="_blank" class="button">Create an Account</a></p>
+    </section>
 
-    
+
         <section id="little-warriors-programs" class="card">
             <h2>Additional Programs by Little Warriors</h2>
             <ul>
