--- a/khk.html
+++ b/khk.html
@@ -24,7 +24,7 @@
             <li>Following the training, enjoy a dynamic Roll-a-thon (10 rounds of 3 minutes each) with local athletes.</li>
             <li>Entry fee: $10.00.</li>
             <li>To be entered into the prize draw, a minimum of $20 raised is required (includes 1 prize draw entry).</li>
-            <li>Additional prize draw entries for each $20 raised.</li>
+            <li>Additional prize draw entries for each $20 raised/donated.</li>
         </ul>
     </section>
 
@@ -44,7 +44,7 @@
         <ul>
             <li><strong>Date:</strong> April 12, 2025</li>
             <li><strong>Location:</strong> Restigouche Dojo</li>
-            <li><strong>Registration Fee:</strong> $10.00 (includes 1 prize draw entry with a minimum of $20 raised for additional entries)</li>
+            <li><strong>Registration Fee:</strong> $10.00 (1 prize draw entry with a minimum of $20 raised. Additional prize draw entries for each $20 raised/donated.</li>
         </ul>
 
     </section>
