Update and rename HajimeBunny.html to hajimebunny.html

--- a/hajimebunny.html
+++ b/hajimebunny.html
@@ -56,9 +56,9 @@
     <div class="download-container">
         <div class="easter-decor">🐰🌸🥕</div>
         <h2>Download Hajime the Judo Bunny</h2>
-        <img src="hajime-bunny.jpg" alt="Hajime the Bunny in Judo Gi">
+        <img src="Photos/Hajime.png" alt="Hajime the Bunny in Judo Gi">
         <br>
-        <a href="hajime-bunny.jpg" download="hajime-judo-bunny.jpg" class="download-btn">Download Image</a>
+        <a href="Photos/Hajime.png" download="Photos/Hajime.png" class="download-btn">Download Image</a>
     </div>
 </body>
 </html>
