--- a/coloringpages.html
+++ b/coloringpages.html
@@ -67,15 +67,15 @@
         
         <div class="image-wrapper">
             <div>
-                <img src="judo-character-1.jpg" alt="Judo Character 1">
+                <img src="Photos/color1.png" alt="Judo Character 1">
                 <br>
-                <a href="judo-character-1.jpg" download="judo-coloring-page-1.jpg" class="download-btn">Download Image 1</a>
+                <a href="jPhotos/color1.png" download="Photos/color1.png" class="download-btn">Download Image 1</a>
             </div>
             
             <div>
-                <img src="judo-character-2.jpg" alt="Judo Character 2">
+                <img src="Photos/color1.png" alt="Judo Character 2">
                 <br>
-                <a href="judo-character-2.jpg" download="judo-coloring-page-2.jpg" class="download-btn">Download Image 2</a>
+                <a href="Photos/color1.png" download="Photos/color1.png" class="download-btn">Download Image 2</a>
             </div>
         </div>
     </div>
