--- a/coloringpages.html
+++ b/coloringpages.html
@@ -69,7 +69,7 @@
             <div>
                 <img src="Photos/color1.png" alt="Judo Character 1">
                 <br>
-                <a href="jPhotos/color1.png" download="Photos/color1.png" class="download-btn">Download Image 1</a>
+                <a href="Photos/color1.png" download="Photos/color1.png" class="download-btn">Download Image 1</a>
             </div>
             
             <div>
