--- a/coloringpages.html
+++ b/coloringpages.html
@@ -77,6 +77,19 @@
                 <br>
                 <a href="Photos/color2.png" download="Photos/color2.png" class="download-btn">Download Image 2</a>
             </div>
+
+              <div>
+                <img src="Photos/color2.png" alt="Judo Character 3">
+                <br>
+                <a href="Photos/color3.png" download="Photos/color3.png" class="download-btn">Download Image 3</a>
+            </div>
+
+              <div>
+                <img src="Photos/color4.png" alt="Judo Character 1=4">
+                <br>
+                <a href="Photos/color4.png" download="Photos/color4.png" class="download-btn">Download Image 4</a>
+            </div>
+            
         </div>
     </div>
 </body>
