--- a/coloringpages.html
+++ b/coloringpages.html
@@ -95,6 +95,12 @@
                 <br>
                 <a href="Photos/color5.png" download="Photos/color5.png" class="download-btn">Download Image 5</a>
             </div>
+
+                          <div>
+                <img src="Photos/color6.png" alt="Judo Character 6">
+                <br>
+                <a href="Photos/color6.png" download="Photos/color6.png" class="download-btn">Download Image 6</a>
+            </div>
             
         </div>
     </div>
