--- a/coloringpages.html
+++ b/coloringpages.html
@@ -96,11 +96,31 @@
                 <a href="Photos/color5.png" download="Photos/color5.png" class="download-btn">Download Image 5</a>
             </div>
 
-                          <div>
+            <div>
                 <img src="Photos/color6.png" alt="Judo Character 6">
                 <br>
                 <a href="Photos/color6.png" download="Photos/color6.png" class="download-btn">Download Image 6</a>
             </div>
+
+            <div>
+                <img src="Photos/color7.png" alt="Judo Character 7">
+                <br>
+                <a href="Photos/color7.png" download="Photos/color7.png" class="download-btn">Download Image 7</a>
+            </div>
+
+            <div>
+                <img src="Photos/color8.png" alt="Judo Character 8">
+                <br>
+                <a href="Photos/color8.png" download="Photos/color8.png" class="download-btn">Download Image 8</a>
+            </div>
+
+            <div>
+                <img src="Photos/color9.png" alt="Judo Character 9">
+                <br>
+                <a href="Photos/color9.png" download="Photos/color9.png" class="download-btn">Download Image 9</a>
+            </div>
+
+            
             
         </div>
     </div>
