--- a/coloringpages.html
+++ b/coloringpages.html
@@ -120,6 +120,30 @@
                 <a href="Photos/color9.png" download="Photos/color9.png" class="download-btn">Download Image 9</a>
             </div>
 
+            <div>
+                <img src="Photos/color10.jpg" alt="Judo Character 10”>
+                <br>
+                <a href="Photos/color10.jpg" download="Photos/color10.jpg"" class="download-btn">Download Image 10</a>
+            </div>
+
+            <div>
+                <img src="Photos/color11.png" alt="Judo Character 11”>
+                <br>
+                <a href="Photos/color11.png" download="Photos/color11.png" class="download-btn">Download Image 11</a>
+            </div>
+
+            <div>
+                <img src="Photos/color12.jpg" alt="Judo Character 12”>
+                <br>
+                <a href="Photos/color12.jpg" download="Photos/color12.jpg" class="download-btn">Download Image 12</a>
+            </div>
+
+            <div>
+                <img src="Photos/color13.jpg" alt="Judo Character 13”>
+                <br>
+                <a href="Photos/color13.jpg" download="Photos/color13.jpg" class="download-btn">Download Image 13</a>
+            </div>
+
             
             
         </div>
