--- a/coloringpages.html
+++ b/coloringpages.html
@@ -135,13 +135,13 @@
             <div>
                 <img src="Photos/color12.jpg" alt="Judo Character 12”>
                 <br>
-                <a href="Photos/color12.jpg" download="Photos/color12.jpg" class="download-btn">Download Image 12</a>
+                <a href="Photos/color12.png" download="Photos/color12.png" class="download-btn">Download Image 12</a>
             </div>
 
             <div>
                 <img src="Photos/color13.jpg" alt="Judo Character 13”>
                 <br>
-                <a href="Photos/color13.jpg" download="Photos/color13.jpg" class="download-btn">Download Image 13</a>
+                <a href="Photos/color13.png" download="Photos/color13.png" class="download-btn">Download Image 13</a>
             </div>
 
             
