--- a/coloringpages.html
+++ b/coloringpages.html
@@ -121,9 +121,9 @@
             </div>
 
             <div>
-                <img src="Photos/color10.jpg" alt="Judo Character 10”>
+                <img src="Photos/color10.png" alt="Judo Character 10”>
                 <br>
-                <a href="Photos/color10.jpg" download="Photos/color10.jpg"" class="download-btn">Download Image 10</a>
+                <a href="Photos/color10.png" download="Photos/color10.png"" class="download-btn">Download Image 10</a>
             </div>
 
             <div>
