--- a/coloringpages.html
+++ b/coloringpages.html
@@ -121,25 +121,25 @@
             </div>
 
             <div>
-                <img src="Photos/color10.png" alt="Judo Character 10”>
+                <img src="Photos/color10.png" alt="Judo Character 10">
                 <br>
-                <a href="Photos/color10.png" download="Photos/color10.png"" class="download-btn">Download Image 10</a>
+                <a href="Photos/color10.png" download="Photos/color10.png" class="download-btn">Download Image 10</a>
             </div>
 
             <div>
-                <img src="Photos/color11.png" alt="Judo Character 11”>
+                <img src="Photos/color11.png" alt="Judo Character 11">
                 <br>
                 <a href="Photos/color11.png" download="Photos/color11.png" class="download-btn">Download Image 11</a>
             </div>
 
             <div>
-                <img src="Photos/color12.jpg" alt="Judo Character 12”>
+                <img src="Photos/color12.png" alt="Judo Character 12">
                 <br>
                 <a href="Photos/color12.png" download="Photos/color12.png" class="download-btn">Download Image 12</a>
             </div>
 
             <div>
-                <img src="Photos/color13.jpg" alt="Judo Character 13”>
+                <img src="Photos/color13.png" alt="Judo Character 13">
                 <br>
                 <a href="Photos/color13.png" download="Photos/color13.png" class="download-btn">Download Image 13</a>
             </div>
