--- a/coloringpages.html
+++ b/coloringpages.html
@@ -144,6 +144,11 @@
                 <a href="Photos/color13.png" download="Photos/color13.png" class="download-btn">Download Image 13</a>
             </div>
 
+            <div>
+                <img src="Photos/color14.png" alt="Judo Character 14">
+                <br>
+                <a href="Photos/color14.png" download="Photos/color14.png" class="download-btn">Download Image 14</a>
+            </div>
             
             
         </div>
