--- a/womenselfdefense.html
+++ b/womenselfdefense.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Women's Self-Defense Workshop</title>
+  <title>Women's Self-Defense Workshop – Control & Connection</title>
   <link rel="stylesheet" href="alternative4.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
 </head>
@@ -23,15 +23,19 @@
     </section>
 
     <section class="section">
-      <h2 class="section-title" id="section-title-1">Welcome to the Women's Self-Defense Workshop <br>*Dates to be determined*</h2>
+      <h2 class="section-title" id="section-title-1">Women's Self-Defense Workshop: Control & Connection <br>*Dates to be determined*</h2>
       <p class="section-content" id="section-content-1">
-        Our workshop focuses on creating a safe space for women by equipping them with the tools they need to defend themselves in a way that prioritizes their safety and well-being. Whether you're a seasoned athlete or a beginner, our experienced instructors will work with you to develop the skills you need to feel empowered and confident. We understand the importance of feeling secure in your daily life, which is why we are committed to providing a supportive and inclusive environment for all participants. Our program is not about promoting aggression or violence, but rather about instilling a sense of confidence and control.
+        We're excited to bring back our Women's Self-Defense Workshop — with a new focus! In our previous session, we covered prevention, creating distance, and seeking safety. This time, we’re diving into what happens when connection is already made.<br><br>
+
+        Learn the most effective Judo and Brazilian Jiu-Jitsu techniques to control, immobilize, and neutralize an aggressor until help arrives. Whether you're a beginner or an experienced athlete, our skilled instructors will work with you to develop confidence and calm under pressure.<br><br>
+
+        Our goal is to create a safe, supportive, and inclusive environment where you can feel empowered and strong — without promoting aggression or violence. Join us in learning how to take control when it matters most.
       </p>
     </section>
 
     <section class="section">
       <h2 class="section-title" id="section-title-2">Enroll Now!</h2>
-      <p class="section-content" id="section-content-2">Take the first step towards feeling confident and secure!</p>
+      <p class="section-content" id="section-content-2">Take the first step toward building confidence, control, and safety.</p>
       <a href="https://restigouchedojo.com/womensselfdefense.html" class="cta-btn">Enroll/Inscription</a>
     </section>
 
