--- a/fitness.html
+++ b/fitness.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Youth Pre-Summer Training Camp – Strength, Sweat & Team Spirit</title>
+  <title>Judo Fit – Strength, Sweat & Team Spirit</title>
   <link rel="stylesheet" href="alternative4.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
-    <h1>Youth Pre-Summer Training Camp</h1>
+    <h1>Judo Fit</h1>
     <a href="#" class="cta-btn">Register Now / Inscris-toi</a>
     <a href="index.html" class="back-btn">Back to Main Website</a> 
   </header>
@@ -23,9 +23,9 @@
     </section>
 
     <section class="section">
-      <h2 class="section-title" id="section-title-1">4-Week Youth Physical Training Camp <br><em>Starts this June!</em></h2>
+      <h2 class="section-title" id="section-title-1">4-Week Judo Fit Camp <br><em>Starts this June!</em></h2>
       <p class="section-content" id="section-content-1">
-        Get ready to sweat, grow, and bond with your teammates like never before. Our 4-week physical training camp is designed to build athleticism, discipline, and real team chemistry — just in time for summer.<br><br>
+        Get ready to sweat, grow, and bond with your teammates like never before. Our 4-week Judo Fit camp is designed to build athleticism, discipline, and real team chemistry — just in time for summer.<br><br>
 
         This program is packed with challenging and fun training sessions focused on strength, endurance, mobility, and mindset. From grappling drills and bodyweight circuits to games that push your limits, this is where young athletes become stronger — together.<br><br>
 
