--- a/judofit.html
+++ b/judofit.html
@@ -47,7 +47,7 @@
     </section>
   </div>
 
-  <script src="/JS/script.js"></script>
+  <script src="/JS/judofitscript.js"></script>
   <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
