--- a/semiprivates.html
+++ b/semiprivates.html
@@ -55,7 +55,7 @@
     </section>
   </div>
 
-  <script src="/JS/script.js"></script>
+  <script src="/JS/semiprivatesscript.js"></script>
   <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
