--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
                   <div class="people__div people__div--info">
                       <h2 class="people__name">Upcoming events</h2>
                       <p class="people__desc">
-			      <a href="https://restigouchedojo.com/registration.html">WINTER 2025 Judo Promotions</a>
-		      		<br><a href="https://restigouchedojo.com/khk.html">Kids Helping Kids Seminar</a>
+			      <a href="https://restigouchedojo.com/semiprivates.html">Semi private lessons</a>
+		      		<br><a href="https://restigouchedojo.com/judofithtml">Judo Fit</a>
 		      		<br> <a href="https://restigouchedojo.com/womenselfdefense.html">Women self-defense 2.0</a>
 		      </p>
                   </div>
@@ -168,8 +168,12 @@
             </div>
 		  
             <div class="offering">
-              <h3>Fitness Classes (upcoming)</h3>
-              <p>Stay fit and healthy with our diverse range of fitness classes for all levels.</p>
+              <h3>Judi Fit (upcoming)</h3>
+              <p>Stay fit and healthy with our Judo Fit classes – full-body workouts inspired by judo movements, designed for all fitness 		levels.
+	      <ul>
+		      <li><a href="judofit.html">Judo Fit</a></li>
+	      </ul>
+	      </p>
             </div>
           </div>
         </section>
