--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                       <h2 class="people__name">Upcoming events</h2>
                       <p class="people__desc">
 			      <a href="https://restigouchedojo.com/semiprivates.html">Semi private lessons</a>
-		      		<br><a href="https://restigouchedojo.com/judofithtml">Judo Fit</a>
+		      		<br><a href="https://restigouchedojo.com/judofit.html">Judo Fit</a>
 		      		<br> <a href="https://restigouchedojo.com/womenselfdefense.html">Women self-defense 2.0</a>
 		      </p>
                   </div>
