--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             </div>
 		  
             <div class="offering">
-              <h3>Judi Fit (upcoming)</h3>
+              <h3>Judo Fit (upcoming)</h3>
               <p>Stay fit and healthy with our Judo Fit classes – full-body workouts inspired by judo movements, designed for all fitness 		levels.
 	      <ul>
 		      <li><a href="judofit.html">Judo Fit</a></li>
