--- a/dojofit.html
+++ b/dojofit.html
@@ -47,7 +47,7 @@
     </section>
   </div>
 
-  <script src="judofitscript.js"></script>
+  <script src="dojofitscript.js"></script>
   <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
