--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                       <h2 class="people__name">Upcoming events</h2>
                       <p class="people__desc">
 			      <a href="https://restigouchedojo.com/semiprivates.html">Semi private lessons</a>
-		      		<br><a href="https://restigouchedojo.com/judofit.html">Judo Fit</a>
+		      		<br><a href="https://restigouchedojo.com/dojofit.html">Dojo Fit</a>
 		      		<br> <a href="https://restigouchedojo.com/womenselfdefense.html">Women self-defense 2.0</a>
 		      </p>
                   </div>
@@ -168,10 +168,10 @@
             </div>
 		  
             <div class="offering">
-              <h3>Judo Fit (upcoming)</h3>
-              <p>Stay fit and healthy with our Judo Fit classes – full-body workouts inspired by judo movements, designed for all fitness 		levels.
+              <h3>Dojo Fit (upcoming)</h3>
+              <p>Stay fit and healthy with our Dojo Fit classes – full-body workouts inspired by grappling movements, designed for all fitness levels.
 	      <ul>
-		      <li><a href="judofit.html">Judo Fit</a></li>
+		      <li><a href="dojofit.html">Dojo Fit</a></li>
 	      </ul>
 	      </p>
             </div>
