--- a/dojofit.html
+++ b/dojofit.html
@@ -19,6 +19,7 @@
       <option value="fr">Français</option>
     </select>
     <section class="hero">
+      <img src="Photos/dojofit.png" alt="Djo Fit">
       <!-- Add a high-energy image or highlight reel of training sessions -->
     </section>
 
