--- a/dojofit.html
+++ b/dojofit.html
@@ -19,7 +19,7 @@
       <option value="fr">Français</option>
     </select>
     <section class="hero">
-      <img src="Photos/dojofit.png" alt="Djo Fit">
+      <img src="Photos/dojofit.png" alt="Dojo Fit" class="hero-image">
       <!-- Add a high-energy image or highlight reel of training sessions -->
     </section>
 
