--- a/semiprivates.html
+++ b/semiprivates.html
@@ -24,13 +24,13 @@
     </section>
 
     <section class="section">
-      <h2 class="section-title" id="section-title-1">Small Group – Big Progress<br><em>Starts This Summer!</em></h2>
+      <h2 class="section-title" id="section-title-1">Small Group – Big Progress<br><em>Starts This May!</em></h2>
       <p class="section-content" id="section-content-1">
-        This summer, keep your child active and progressing in their martial arts journey with our <strong>Semi-Private Judo & Brazilian Jiu-Jitsu sessions</strong> – designed for personalized attention and steady improvement.<br><br>
+        Keep your child active and progressing in their martial arts journey with our <strong>Semi-Private Judo & Brazilian Jiu-Jitsu sessions</strong> – designed for personalized attention and steady improvement.<br><br>
 
         Limited to just <strong>6 students per session</strong>, these small group classes allow for more individual coaching, deeper learning, and a stronger connection with training partners.<br><br>
 
-        Whether your child is just starting or returning to build on what they’ve learned, these sessions are perfect for staying consistent and motivated over the summer break. Our experienced coaches focus on real technique, movement quality, and fostering a respectful, challenging, and fun environment.
+        Whether your child is just starting or returning to build on what they’ve learned, these sessions are perfect for staying consistent and motivated over the off-seaon. Our experienced coaches focus on real technique, movement quality, and fostering a respectful, challenging, and fun environment.
       </p>
     </section>
 
@@ -42,7 +42,7 @@
         ✅ Continue training while others take a break<br>
         ✅ Build discipline, coordination, and confidence<br><br>
 
-        <strong>Don't miss this opportunity to keep your child engaged, learning, and growing through the summer months.</strong>
+        <strong>Don't miss this opportunity to keep your child engaged, learning, and growing through the off-season.</strong>
       </p>
       <a href="https://restigouchedojo.com/summer-semi-private.html" class="cta-btn">Register Now / Inscris-toi</a>
     </section>
