--- a/semiprivates.html
+++ b/semiprivates.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Semi-Private Judo & BJJ – Summer Training Sessions</title>
+  <title>Semi-Private Judo & BJJ – Off-Season Training Sessions</title>
   <link rel="stylesheet" href="alternative4.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
-    <h1>Semi-Private Judo & BJJ – Summer Training</h1>
+    <h1>Semi-Private Judo & BJJ – Off-Season Training</h1>
     <a href="#" class="cta-btn">Register Now / Inscris-toi</a>
     <a href="index.html" class="back-btn">Back to Main Website</a> 
   </header>
