--- a/dojofit.html
+++ b/dojofit.html
@@ -28,7 +28,7 @@
       <p class="section-content" id="section-content-1">
         Get ready to sweat, grow, and bond with your teammates like never before. Our 4-week Dojo Fit camp is designed to build athleticism, discipline, and real team chemistry — just in time for summer.<br><br>
 
-        This program is packed with challenging and fun training sessions focused on strength, endurance, mobility, and mindset. From grappling drills and bodyweight circuits to games that push your limits, this is where young athletes become stronger — together.<br><br>
+        This program is packed with challenging and fun training sessions focused on strength, endurance, mobility, and mindset. From grappling drills and bodyweight circuits to weight training and games that push your limits, this is where young athletes become stronger — together.<br><br>
 
         Led by experienced coaches, every session is built around developing grit, improving fitness, and reinforcing core values like respect, effort, and teamwork. Whether you're preparing for sport or just want to level up, this camp is for you.
       </p>
