--- a/dojofit.html
+++ b/dojofit.html
@@ -37,7 +37,7 @@
     <section class="section">
       <h2 class="section-title" id="section-title-2">Spots Are Limited — Register Now!</h2>
       <p class="section-content" id="section-content-2">Make this summer your strongest yet. Learn. Sweat. Bond. Repeat.</p>
-      <a href="https://restigouchedojo.com/youthcamp.html" class="cta-btn">Register Now / Inscris-toi</a>
+      <a href="https://restigouchedojo.com/contactus.html" class="cta-btn">Register Now / Inscris-toi</a>
     </section>
 
     <section class="section">
