--- a/dojofit.html
+++ b/dojofit.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <h1>Dojo Fit</h1>
-    <a href="#" class="cta-btn">Register Now / Inscris-toi</a>
+    <a href="https://restigouchedojo.com/contactus.html" class="cta-btn">Register Now / Inscris-toi</a>
     <a href="index.html" class="back-btn">Back to Main Website</a> 
   </header>
   <div class="container">
