--- a/womenselfdefense.html
+++ b/womenselfdefense.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <h1>Women's Self-Defense Workshop</h1>
-    <a href="#" class="cta-btn">Enroll/Inscription</a>
+    <a href="https://restigouchedojo.com/contactus.html" class="cta-btn">Enroll/Inscription</a>
     <a href="index.html" class="back-btn">Back to Main Website</a> 
   </header>
   <div class="container">
@@ -36,7 +36,7 @@
     <section class="section">
       <h2 class="section-title" id="section-title-2">Enroll Now!</h2>
       <p class="section-content" id="section-content-2">Take the first step toward building confidence, control, and safety.</p>
-      <a href="https://restigouchedojo.com/womensselfdefense.html" class="cta-btn">Enroll/Inscription</a>
+      <a href="https://restigouchedojo.com/contactus.html" class="cta-btn">Enroll/Inscription</a>
     </section>
 
     <section class="section">
