--- a/dojofit.html
+++ b/dojofit.html
@@ -24,7 +24,7 @@
     </section>
 
     <section class="section">
-      <h2 class="section-title" id="section-title-1">4-Week Dojo Fit Camp <br><em>Starts this May!</em></h2>
+      <h2 class="section-title" id="section-title-1">4-Week Dojo Fit Camp- Open to members and non-members <br><em>Starts this May!</em></h2>
       <p class="section-content" id="section-content-1">
         Get ready to sweat, grow, and bond with your teammates like never before. Our 4-week Dojo Fit camp is designed to build athleticism, discipline, and real team chemistry — just in time for summer.<br><br>
 
