--- a/womenselfdefense.html
+++ b/womenselfdefense.html
@@ -19,6 +19,7 @@
       <option value="fr">Français</option>
     </select>
     <section class="hero">
+      <img src="Photos/womenselfdefense.png" alt="Women's Self Defense" class="hero-image">
       <!-- Add a visually striking image or video related to the workshop -->
     </section>
 
