--- a/semiprivates.html
+++ b/semiprivates.html
@@ -20,6 +20,7 @@
     </select>
 
     <section class="hero">
+      <img src="Photos/dojofit.png" alt="Dojo Fit" class="hero-image">
       <!-- Add a high-energy image of small group martial arts training -->
     </section>
 
