--- a/semiprivates.html
+++ b/semiprivates.html
@@ -20,7 +20,7 @@
     </select>
 
     <section class="hero">
-      <img src="Photos/dojofit.png" alt="Dojo Fit" class="hero-image" style="width: 50%; height: auto;>
+      <img src="Photos/semiprivate.png" alt="Semi Private" class="hero-image" style="width: 50%; height: auto;>
       <!-- Add a high-energy image of small group martial arts training -->
     </section>
 
