--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                       <p class="people__desc">
 			      <a href="https://restigouchedojo.com/semiprivates.html">Semi private lessons</a>
 		      		<br><a href="https://restigouchedojo.com/dojofit.html">Dojo Fit</a>
-		      		<br> <a href="https://restigouchedojo.com/womenselfdefense.html">Women self-defense 2.0</a>
+		      		<br> <a href="https://restigouchedojo.com/womenselfdefense.html">Women self-defence 2.0</a>
 		      </p>
                   </div>
                   <div class="people__div people__div--name">
@@ -142,10 +142,10 @@
 	      </p>
             </div>
             <div class="offering">
-              <h3>Self-Defense Classes</h3>
+              <h3>Self-Defence Classes</h3>
               <p>Master essential self-defense skills and techniques to protect yourself.
 	      	      <ul>
-		      <li><a href="womenselfdefense.html">Women self-defense </a></li>
+		      <li><a href="womenselfdefence.html">Women self-defence </a></li>
 	      </ul>
 	      </p>
             </div>
