Update and rename womenselfdefense.html to womenselfdefence.html

--- a/womenselfdefence.html
+++ b/womenselfdefence.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Women's Self-Defense Workshop – Control & Connection</title>
+  <title>Women's Self-Defence Workshop – Control & Connection</title>
   <link rel="stylesheet" href="alternative4.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
-    <h1>Women's Self-Defense Workshop</h1>
+    <h1>Women's Self-Defence Workshop</h1>
     <a href="https://restigouchedojo.com/contactus.html" class="cta-btn">Enroll/Inscription</a>
     <a href="index.html" class="back-btn">Back to Main Website</a> 
   </header>
@@ -24,9 +24,9 @@
     </section>
 
     <section class="section">
-      <h2 class="section-title" id="section-title-1">Women's Self-Defense Workshop: Control & Connection <br>*Dates to be determined*</h2>
+      <h2 class="section-title" id="section-title-1">Women's Self-Defence Workshop: Control & Connection <br>*Dates to be determined*</h2>
       <p class="section-content" id="section-content-1">
-        We're excited to bring back our Women's Self-Defense Workshop — with a new focus! In our previous session, we covered prevention, creating distance, and seeking safety. This time, we’re diving into what happens when connection is already made.<br><br>
+        We're excited to bring back our Women's Self-Defence Workshop — with a new focus! In our previous session, we covered prevention, creating distance, and seeking safety. This time, we’re diving into what happens when connection is already made.<br><br>
 
         Learn the most effective Judo and Brazilian Jiu-Jitsu techniques to control, immobilize, and neutralize an aggressor until help arrives. Whether you're a beginner or an experienced athlete, our skilled instructors will work with you to develop confidence and calm under pressure.<br><br>
 
@@ -43,7 +43,7 @@
     <section class="section">
       <h2 class="section-title" id="disclaimer-title">Disclaimer</h2>
       <div class="section-content" id="disclaimer-content">
-        <p>Please note that our program is not a guarantee of safety. While we teach self-defense techniques, situations can vary, and participants should use their judgment in real-life situations. Our goal is to empower women with skills and confidence, but ultimate safety relies on various factors.</p>
+        <p>Please note that our program is not a guarantee of safety. While we teach self-defence techniques, situations can vary, and participants should use their judgment in real-life situations. Our goal is to empower women with skills and confidence, but ultimate safety relies on various factors.</p>
       </div>
     </section>
   </div>
