--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                       <p class="people__desc">
 			      <a href="https://restigouchedojo.com/semiprivates.html">Semi private lessons</a>
 		      		<br><a href="https://restigouchedojo.com/dojofit.html">Dojo Fit</a>
-		      		<br> <a href="https://restigouchedojo.com/womenselfdefense.html">Women self-defence 2.0</a>
+		      		<br> <a href="https://restigouchedojo.com/womenselfdefence.html">Women self-defence 2.0</a>
 		      </p>
                   </div>
                   <div class="people__div people__div--name">
