--- a/womenselfdefence.html
+++ b/womenselfdefence.html
@@ -19,7 +19,7 @@
       <option value="fr">Français</option>
     </select>
     <section class="hero">
-      <img src="Photos/womenselfdefense.png" alt="Women's Self Defense" class="hero-image" style="width: 50%; height: auto; border-radius: 10px;" >
+     <!--  <img src="Photos/#" alt="Women's Self Defense" class="hero-image" style="width: 50%; height: auto; border-radius: 10px;" > -->
       <!-- Add a visually striking image or video related to the workshop -->
     </section>
 
