--- a/merch.html
+++ b/merch.html
@@ -54,7 +54,7 @@
       font-size: 20px;
       color: #333;
     }
-    .price, .stock {
+    .price, .stock, .sizes {
       margin: 5px 0;
       font-size: 16px;
     }
@@ -93,8 +93,9 @@
     <div class="product">
       <img src="rashguard.jpg" alt="Restigouche Dojo No-Gi Rashguard">
       <h3>No-Gi Rashguard</h3>
-      <div class="price">Youth: $100 | Adult: $100</div>
+      <div class="price">Youth: $39.99 | Adult: $49.99</div>
       <div class="stock" data-youth="10" data-adult="8">Stock: Youth - 10 | Adult - 8</div>
+      <div class="sizes">Sizes Available: Youth S, M, L | Adult M, L, XL</div>
       <a href="mailto:info@restigouchedojo.com?subject=Rashguard%20Inquiry" class="contact-button">Contact Us to Reserve</a>
     </div>
 
@@ -104,6 +105,7 @@
       <h3>Coming Soon Item #1</h3>
       <div class="price">Price: $XX.XX</div>
       <div class="stock" data-youth="0" data-adult="0">Stock: Youth - 0 | Adult - 0</div>
+      <div class="sizes">Sizes Available: Coming Soon</div>
       <a href="mailto:info@restigouchedojo.com?subject=Product%20Inquiry" class="contact-button">Contact Us to Reserve</a>
     </div>
 
@@ -113,6 +115,7 @@
       <h3>Coming Soon Item #2</h3>
       <div class="price">Price: $XX.XX</div>
       <div class="stock" data-youth="0" data-adult="0">Stock: Youth - 0 | Adult - 0</div>
+      <div class="sizes">Sizes Available: Coming Soon</div>
       <a href="mailto:info@restigouchedojo.com?subject=Product%20Inquiry" class="contact-button">Contact Us to Reserve</a>
     </div>
 
