--- a/merch.html
+++ b/merch.html
@@ -93,10 +93,10 @@
     <div class="product">
       <img src="rashguard.jpg" alt="Restigouche Dojo No-Gi Rashguard">
       <h3>No-Gi Rashguard</h3>
-      <div class="price">Youth: $39.99 | Adult: $49.99</div>
-      <div class="stock" data-youth="10" data-adult="8">Stock: Youth - 10 | Adult - 8</div>
-      <div class="sizes">Sizes Available: Youth S, M, L | Adult M, L, XL</div>
-      <a href="mailto:info@restigouchedojo.com?subject=Rashguard%20Inquiry" class="contact-button">Contact Us to Reserve</a>
+      <div class="price">Youth: $100 | Adult: $100</div>
+      <div class="stock" data-youth="10" data-adult="8">Stock: Kids - 0 | Adult - 4</div>
+      <div class="sizes">Sizes Available: Kids 0 | Adult XXL, XL</div>
+      <a href="mailto:restigouchedojo@gmail.com?subject=Rashguard%20Inquiry" class="contact-button">Contact Us to Reserve</a>
     </div>
 
     <!-- Future Product 1 (Hidden for now) -->
