--- a/merch.html
+++ b/merch.html
@@ -103,8 +103,8 @@
     <div class="product">
       <img src="rashguard.jpg" alt="Restigouche Dojo No-Gi Rashguard and Shorts">
       <h3>No-Gi Rashguard + Shorts</h3>
-      <div class="price">Youth: $60(Top) / $40 (Bottom) | Adult: $60 (Top) / $40 (Bottom)</div>
-      <div class="stock" data-youth="10" data-adult="8">Stock: Youth - 0 sets | Adult - 4 sets</div>
+      <div class="price">Kids: $60(Top) / $40 (Bottom) | Adult: $60 (Top) / $40 (Bottom)</div>
+      <div class="stock" data-youth="10" data-adult="8">Stock: Kids - 0 sets | Adult - 4 sets</div>
       <div class="sizes-group">
         <strong>Rashguard Sizes Available:</strong> Kids 0 | Adult XL, XL, XXL, XXL
       </div>
