--- a/merch.html
+++ b/merch.html
@@ -101,7 +101,7 @@
 
     <!-- Rashguard and Shorts Product -->
     <div class="product">
-      <img src="rashguard.jpg" alt="Restigouche Dojo No-Gi Rashguard and Shorts">
+      <img src="Photos/nogisetlongsleeve.png" alt="Restigouche Dojo No-Gi Rashguard and Shorts">
       <h3>No-Gi Rashguard + Shorts</h3>
       <div class="price">Kids: No-Gi Set- $100  | Adult: No-Gi Sets- $100 </div>
       <div class="stock" data-youth="10" data-adult="8">Stock: Kids - 0 sets | Adult - 4 sets</div>
