--- a/merch.html
+++ b/merch.html
@@ -46,7 +46,7 @@
       width: 100%;
       height: auto;
       max-height: 250px;
-      object-fit: cover;
+      object-fit: contain;
       border-bottom: 1px solid #ddd;
     }
     .product h3 {
