--- a/merch.html
+++ b/merch.html
@@ -45,7 +45,7 @@
     .product img {
       width: 100%;
       height: auto;
-      max-height: 250px;
+      min-height: 250px;
       object-fit: contain;
       border-bottom: 1px solid #ddd;
     }
