--- a/merch.html
+++ b/merch.html
@@ -3,127 +3,115 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Restigouche Dojo No-Gi Gear</title>
+  <title>Restigouche Dojo Merch</title>
   <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #f0f2f5;
-      margin: 0;
-      padding: 0;
-      color: #333;
-    }
-
-    .container {
-      max-width: 1100px;
-      margin: 50px auto;
-      padding: 30px;
-      background: #fff;
-      border-radius: 12px;
-      box-shadow: 0 8px 25px rgba(0,0,0,0.08);
-    }
-
-    h1 {
-      text-align: center;
-      font-size: 36px;
-      margin-bottom: 10px;
-      color: #111;
-    }
-
-    p {
-      text-align: center;
-      font-size: 18px;
-      margin-bottom: 40px;
-      color: #555;
-    }
-
-    .products {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 25px;
-    }
-
-    .product {
-      background: #fafafa;
-      border: 1px solid #ddd;
-      border-radius: 10px;
-      overflow: hidden;
-      text-align: center;
-      padding: 20px 15px;
-      transition: all 0.3s ease;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-    }
-
-    .product:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-    }
-
-    .product img {
-      width: 100%;
-      height: auto;
-      min-height: 250px;
-      object-fit: contain;
-      margin-bottom: 15px;
-      background: #fff;
-    }
-
-    .product h3 {
-      font-size: 22px;
-      margin-bottom: 8px;
-      color: #222;
-    }
-
-    .price, .stock, .sizes {
-      font-size: 16px;
-      margin: 5px 0;
-    }
-
-    .sizes-group {
-      margin-top: 10px;
-      text-align: left;
-      font-size: 15px;
-    }
-
-    .sizes-group strong {
-      display: block;
-      margin-bottom: 4px;
-      color: #666;
-    }
-
-    .contact-button {
-      display: inline-block;
-      margin-top: 15px;
-      padding: 12px 25px;
-      background-color: #007BFF;
-      color: #fff;
-      text-decoration: none;
-      border-radius: 6px;
-      font-size: 16px;
-      font-weight: bold;
-      transition: background-color 0.3s ease;
-    }
-
-    .contact-button:hover {
-      background-color: #0056b3;
-    }
-
-    .hidden {
-      display: none;
-    }
-
-    .out-of-stock {
-      color: red;
-      font-weight: bold;
-    }
-  </style>
+  body {
+    font-family: 'Poppins', Arial, sans-serif;
+    background: #f0f2f5;
+    margin: 0;
+    padding: 0;
+    color: #333;
+  }
+  .container {
+    max-width: 1100px;
+    margin: 50px auto;
+    padding: 30px;
+    background: #fff;
+    border-radius: 12px;
+    box-shadow: 0 8px 20px rgba(0,0,0,0.12);
+  }
+  h1 {
+    text-align: center;
+    color: #111;
+    font-size: 36px;
+    margin-bottom: 10px;
+    font-weight: 700;
+    letter-spacing: 1px;
+  }
+  p {
+    text-align: center;
+    font-size: 18px;
+    color: #555;
+    margin-top: 0;
+    margin-bottom: 40px;
+  }
+  .products {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
+    gap: 25px;
+  }
+  .product {
+    background: #fafafa;
+    border: 1px solid #e0e0e0;
+    border-radius: 10px;
+    overflow: hidden;
+    text-align: center;
+    padding: 20px;
+    transition: transform 0.25s ease, box-shadow 0.25s ease;
+    position: relative;
+  }
+  .product:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 12px 25px rgba(0,0,0,0.15);
+  }
+  .product img {
+    width: 100%;
+    height: auto;
+    min-height: 250px;
+    object-fit: contain;
+    border-bottom: 1px solid #ddd;
+    margin-bottom: 15px;
+  }
+  .product h3 {
+    margin: 10px 0 5px;
+    font-size: 22px;
+    color: #222;
+    font-weight: 600;
+  }
+  .price, .stock, .sizes {
+    margin: 5px 0;
+    font-size: 16px;
+    color: #555;
+  }
+  .sizes-group {
+    margin-top: 10px;
+    text-align: left;
+    font-size: 15px;
+  }
+  .sizes-group strong {
+    display: block;
+    margin-bottom: 4px;
+    color: #444;
+  }
+  .contact-button {
+    display: inline-block;
+    margin-top: 12px;
+    padding: 12px 24px;
+    background-color: #d32f2f;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 30px;
+    font-size: 16px;
+    font-weight: bold;
+    transition: background-color 0.3s ease;
+  }
+  .contact-button:hover {
+    background-color: #b71c1c;
+  }
+  .hidden {
+    display: none;
+  }
+  .out-of-stock {
+    color: red;
+    font-weight: bold;
+  }
+</style>
 </head>
 <body>
 
 <div class="container">
-  <h1>Restigouche Dojo No-Gi Gear</h1>
-  <p>Official training gear built for performance and durability. Limited quantities — available for pick-up only!</p>
+  <h1>Restigouche Dojo Merch</h1>
+  <p>Official merch — made for the team, worn everywhere. Limited quantities — available for pick-up only!</p>
 
   <div class="products">
 
