--- a/merch.html
+++ b/merch.html
@@ -20,14 +20,20 @@
     border-radius: 12px;
     box-shadow: 0 8px 20px rgba(0,0,0,0.12);
   }
+  <style>
   h1 {
     text-align: center;
-    color: #111;
-    font-size: 36px;
-    margin-bottom: 10px;
+    font-size: 38px;
     font-weight: 700;
+    color: #fff;
+    background: linear-gradient(90deg, #d32f2f 0%, #b71c1c 100%);
+    padding: 20px;
+    margin-bottom: 20px;
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.25);
     letter-spacing: 1px;
   }
+</style>
   p {
     text-align: center;
     font-size: 18px;
