--- a/merch.html
+++ b/merch.html
@@ -24,7 +24,7 @@
       font-size: 38px;
       font-weight: 700;
       color: #fff;
-      background: linear-gradient(90deg, #d32f2f 0%, #b71c1c 100%);
+      background: linear-gradient(90deg, #009688 0%, #00695c 100%);
       padding: 20px;
       margin-bottom: 20px;
       border-radius: 12px;
