--- a/merch.html
+++ b/merch.html
@@ -107,7 +107,7 @@
 
 <div class="container">
   <h1>Restigouche Dojo Merch</h1>
-  <p style="text-align:center;">Official training gear built for performance and durability. Limited quantities — available for pick-up only!</p>
+  <p style="text-align:center;">Official merch — made for the team, worn everywhere. Limited quantities — available for pick-up only!</p>
 
   <div class="products">
 
